# luxora

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  Readme.md  doxide.yaml  mkdocs.yaml
.github/workflows/: c-cpp.yml
include/luxora/: dataframe.h  fixed_string.h  luxora.h  series.h
resources/: missing.csv  timeseries.csv
src/: dataframe.cpp  lib.cpp  main.cpp  series.cpp
standalone/: main.cpp
tests/: CMakeLists.txt
tests/src/: dataframe_test.cpp  debug.cpp  fixed_string.cpp  main.cpp  series_test.cpp
